# my_lib

./: .gitignore  README.md  gitignore_rm.sh  init.sh  main.py  pyproject.toml  pytest.ini  setup.py
examples/: hero.py
my_lib/: __init__.py
my_lib/models/: __init__.py  hero.py  hero_def.py
tests/: test_example.py
